fix: attempt to debug 99/100 error on iphone

--- a/src/components/modules/SceneLoader/SceneLoader.scss
+++ b/src/components/modules/SceneLoader/SceneLoader.scss
@@ -14,10 +14,6 @@
     filter: grayscale(1);
   }
 
-  .background {
-    height: calc(100vh - 32px);
-  }
-
   .subtitle {
     filter: saturate(4.8);
   }
